--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Add a separate CSS file for styling -->
+
 </head>
 <body>
-    <div>
-        <h1 id="pageTitle">TSB Road Patrol - Loading...</h1>
+    <div class="container">
+        <h1 id="pageTitle">TSB Road Patrol -</h1>
         <pre id="apiResponse"></pre>
     </div>
     <script src="script.js"></script>
